# Editor

./: .gitignore  CMakeLists.txt  Commands.cpp  Commands.h  Editor.cpp  Editor.h  EditorTest.cpp  Message.cpp  Message.h  Recipe.txt  Text.txt  main.cpp
